--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vidly-app",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "jest --watchAll --verbose --coverage  --runInBand",
     "start": "node index.js"
@@ -30,6 +30,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
+    "mongodb": "^3.3.2",
     "mongoose": "^5.6.7",
     "winston": "^2.4.0",
     "winston-mongodb": "^3.0.0"
