--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vidly-app",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "test": "jest --watchAll --verbose --coverage  --runInBand",
     "start": "node index.js"
